2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, scorerender-admin.php:
	- ImageMagick minimum requirement is 6.3.5-7, not 6.3.6-2 as
	  documented before (option was wrong too, should be -alpha)
	* notation/mup.php, notation/pmw.php:
	- Properly get around a bug fixed in 6.3.9-6 that affects
	  alpha channel in paletted images.

2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, notation/*.php:
	- (is_notation_usable, is_prog_usable) Allows calling as both a
	  static method and from instantiated class object, so that they
	  can be used both during admin page checking and rendering.
	- (render) Also check for bad notation program.
	* notation/lilypond.php:
	- Stores lilypond version as class property during is_prog_usable().

2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* notation/lilypond.php:
	- (lilypond_version) Removed, functionality is already implemented
	  in the new is_prog_usable().

2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (is_midi_file): New func, to check if certain file is a MIDI.

2010-03-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Adds $imagick_ver for storing detected ImageMagick version
	- (is_web_hosting) Fix return value.
	- (is_prog_usable) Overhaul of func, returns WP_Error on error
	  instead of boolean, adds minimum program version checking,
	  checks regular expression instead of strings in command output,
	  and optionally writes detected program version into another var.
	* notation/{abc,mup,lilypond,pmw}.php:
	- (is_notation_usable) Adopt the change in is_prog_usable().
	* scorerender-admin.php:
	- (update_options) Adopt the change in is_prog_usable(), prints
	  extra error message returned by is_prog_usable().

2010-02-27  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Better error handling and make use of WP_Error.

2010-02-27  Abel Cheung  <abelcheung@gmail.com>
